header section with desktop version completed

--- a/index.html
+++ b/index.html
@@ -8,14 +8,58 @@
     <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
-    <div class="row">
         <!-- header section -->
      <header>
-        <nav>
-            <div>
-                <h2>PulseFit</h2>
+        <div class="bg-header">
+            <div class="row">
+                <nav>
+                    <div class="nav-content">
+                        <div class="nav-logo">
+                            <h2>PulseFit</h2>
+                        </div>
+                        <div class="nav-menu">
+                            <ul>
+                                <li><a class="active" href="#">Home</a></li>
+                                <li><a href="#">Service</a></li>
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">About</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+                <!-- banner section -->
+                 <section>
+                    <div class="banner-section">
+                        <div class="banner-left">
+                            <h1>Get body in <br> <span>shape</span> & stay <br> healthy</h1>
+                            <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
+                            <div class="banner-l-btn">
+                                <button class="banner-left-btn">Join Club Now</button>
+                                <button class="banner-right-btn">Download App</button>
+                            </div>
+                        </div>
+                        <div class="banner-right">
+                            <div class="banner-right-img">
+                                <img src="images/Images 2.png" alt="">
+                            </div>
+                            <div class="banner-box">
+                                <div class="banner-box-right">
+                                    <h2>500+</h2>
+                                    <span>Free Workout Videos</span>
+                                </div>
+                                <div class="banner-box-left">
+                                    <div class="box-circle"></div>
+                                    <div>
+                                        <h2>350+</h2>
+                                        <span>Video tutorial</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                 </section>
             </div>
-        </nav>
+        </div>
      </header>
     <!-- main section -->
      <main>
@@ -25,6 +69,5 @@
      <footer>
         
      </footer>
-    </div>
 </body>
 </html>
