header section completed with mobile responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
 </head>
@@ -18,6 +19,7 @@
                             <h2>PulseFit</h2>
                         </div>
                         <div class="nav-menu">
+                            <span class="menu-icon"><i class="fa-solid fa-bars"></i></span>
                             <ul>
                                 <li><a class="active" href="#">Home</a></li>
                                 <li><a href="#">Service</a></li>
