main change your habits section added successful added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <!-- header section -->
      <header>
         <div class="bg-header">
-            <div class="row">
-                <nav>
+            <nav>
+                <div class="row">
                     <div class="nav-content">
                         <div class="nav-logo">
                             <h2>PulseFit</h2>
@@ -28,9 +28,11 @@
                             </ul>
                         </div>
                     </div>
-                </nav>
-                <!-- banner section -->
-                 <section>
+                </div>
+            </nav>
+            <!-- banner section -->
+             <section>
+                <div class="row">
                     <div class="banner-section">
                         <div class="banner-left">
                             <h1>Get body in <br> <span>shape</span> & stay <br> healthy</h1>
@@ -59,13 +61,44 @@
                             </div>
                         </div>
                     </div>
-                 </section>
-            </div>
+                </div>
+             </section>
         </div>
      </header>
     <!-- main section -->
      <main>
-        
+        <div class="row">
+            <section class="habits-section">
+                <div class="c-habits">
+                    <div class="c-habits-text">
+                        <h2>Change Your Habits</h2>
+                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+                    </div>
+                    <div class="c-habits-profile">
+                        <div class="c-habits-content">
+                            <img src="images/image 2.png" alt="exercise1">
+                            <h3>Movement</h3>
+                            <span>We believe fitness should be accessible to everyone</span>
+                        </div>
+                        <div class="c-habits-content">
+                            <img src="images/image 3.png" alt="exercise1">
+                            <h3>Movement</h3>
+                            <span>We believe fitness should be accessible to everyone</span>
+                        </div>
+                        <div class="c-habits-content">
+                            <img src="images/image 4.png" alt="exercise1">
+                            <h3>Movement</h3>
+                            <span>We believe fitness should be accessible to everyone</span>
+                        </div>
+                        <div class="c-habits-content">
+                            <img src="images/image 5.png" alt="exercise1">
+                            <h3>Movement</h3>
+                            <span>We believe fitness should be accessible to everyone</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
      </main>
     <!-- footer section -->
      <footer>
