run and extra section with responsive added successful added

--- a/index.html
+++ b/index.html
@@ -98,6 +98,20 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="run-extra">
+                    <div class="run-extra-content">
+                        <div class="run-extra-text">
+                            <h3>Run an Extra <br> Mile Easily</h3>
+                            <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                            <button>Join Now</button>
+                        </div>
+                        <div class="run-extra-img">
+                            <img src="images/run.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
      </main>
     <!-- footer section -->
