train and exercises section added successful

--- a/index.html
+++ b/index.html
@@ -113,6 +113,47 @@
                 </div>
             </section>
         </div>
+        <!-- training and exercises  -->
+        <section>
+            <div class="row">
+                <div class="train-exercise">
+                    <div class="train-exercise-text">
+                        <h3>Trainings and Exercises</h3>
+                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+                    </div>
+                    <div class="train-exercise-img">
+                        <div class="train-frist-row">
+                            <div class="train-exercise-transform">
+                                <img src="images/exercise1.jpg" alt="">
+                                <span>Transform your body</span>
+                            </div>
+                            <div class="train-exercise-achieve">
+                                <img src="images/exercise2.png" alt="">
+                                <span>Achieve Your Fitness Goals</span>
+                            </div>
+                            <div class="train-exercise-health">
+                                <img src="images/exercise3.png" alt="">
+                                <span>health with personalized</span>
+                            </div>
+                        </div>
+                        <div class="train-second-row">
+                            <div class="train-exercise-customize">
+                                <img src="images/exercise4.png" alt="">
+                                <span> customized workout plans</span>
+                            </div>
+                            <div class="train-exercise-strength">
+                                <img src="images/exercise5.jpg" alt="">
+                                <span>strength training to yoga</span>
+                            </div>
+                            <div class="train-exercise-fitness">
+                                <img src="images/exercise6.jpg" alt="">
+                                <span>Fitness Tips, Workouts</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </section>
      </main>
     <!-- footer section -->
      <footer>
