--- a/index.html
+++ b/index.html
@@ -154,6 +154,78 @@
                 </div>
             </div>
          </section>
+         <!-- BMI calculator section -->
+         <section>
+            <div class="bmi-calculator">
+                <div class="row">
+                    <div class="calculator-text">
+                        <h2>BMI Calculator</h2>
+                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+                    </div>
+                </div>
+                <div class="caculator-form-section">
+                    <div class="row">
+                        <div class="calculator-section">
+                            <div>
+                                <h3>BMI Calculator Chart</h3>
+                                <table>
+                                <tr>
+                                    <th>BMI</th>
+                                    <th>Weight Status</th>
+                                </tr>
+                                <tr>
+                                    <td>Below 18.5</td>
+                                    <td>Underweight</td>
+                                </tr>
+                                <tr>
+                                    <td>18.5 - 24.9</td>
+                                    <td>Healthy</td>
+                                </tr>
+                                <tr>
+                                    <td>25.0 - 29.9</td>
+                                    <td>Overweight</td>
+                                </tr>
+                                <tr>
+                                    <td>30.0 - and Above</td>
+                                    <td>Obese</td>
+                                </tr>
+                                </table>
+                            </div>
+                            <div class="caculator-form">
+                                <div class="calculate-text">
+                                    <h3>Calculate your BMI</h3>
+                                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of <br> income or access to a gym. </p>
+                                </div>
+                                <div class="calculate-form">
+                                    <form>
+                                        <div class="c-form-input">
+                                            <div>
+                                                <input type="text" name="" id="" placeholder="Height/cm">
+                                            </div>
+                                            <div>
+                                                <input type="text" name="" id="" placeholder="Weight/kg">
+                                            </div>
+                                        </div>
+                                        <div class="c-form-input">
+                                            <div>
+                                                <input type="text" name="" id="" placeholder="Age">
+                                            </div>
+                                            <div>
+                                                <input type="text" name="" id="" placeholder="Sex">
+                                            </div>
+                                        </div>
+                                        <div class="c-form-input-full">
+                                            <input type="text" name="" id="" placeholder="Select an activity factor">
+                                        </div>
+                                        <button class="calculate-btn">Calculate</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </section>
      </main>
     <!-- footer section -->
      <footer>
