team section with mobile responsive added successfully

--- a/index.html
+++ b/index.html
@@ -226,6 +226,27 @@
                 </div>
             </div>
          </section>
+         <!-- team section -->
+          <section> 
+            <div class="row">
+                <div class="team-text">
+                    <h2>Meet Our Team</h2>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                </div>
+                <div class="team-img-section">
+                    <div class="team-img-frist">
+                        <div><img src="images/trainer1.png" alt=""></div>
+                        <div><img src="images/trainer2.png" alt=""></div>
+                        <div><img src="images/trainer3.png" alt=""></div>
+                    </div>
+                    <div class="team-img-second">
+                        <div><img src="images/trainer4.png" alt=""></div>
+                        <div><img src="images/trainer5.png" alt=""></div>
+                        <div><img src="images/trainer6.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+          </section>
      </main>
     <!-- footer section -->
      <footer>
