--- a/index.html
+++ b/index.html
@@ -250,7 +250,40 @@
      </main>
     <!-- footer section -->
      <footer>
-        
+        <div class="footer-section">
+            <div class="row">
+                <div class="footer-content">
+                    <div>
+                        <h2>Fitness</h2>
+                        <p>We believe fitness should be accessible to everyone, everywhere, <br> regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                    </div>
+                    <div class="footer-menu">
+                        <h3>Get Started</h3>
+                        <ul>
+                            <li><a href="#">Service</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Affiliate Program</a></li>
+                            <li><a href="#">About Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-menu">
+                        <h3>Get Started</h3>
+                        <ul>
+                            <li><a href="#">Fitness</a></li>
+                            <li><a href="#">Platform</a></li>
+                            <li><a href="#">Workout Libary</a></li>
+                            <li><a href="#">App Design</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-reserve">
+                    <hr>
+                    <div>
+                        <p>All right reserved &#169; Fitness 2024</p>
+                    </div>
+                </div>
+            </div>
+        </div>
      </footer>
 </body>
 </html>
